--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,7 @@
 
+.css-z7uhs0-MuiStepConnector-line {
+    display: none;
+    border-color: #bdbdbd;
+    border-top-style: solid;
+    border-top-width: 1px;
+}
